--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="http://t2.gstatic.com/licensed-image?q=tbn:ANd9GcRmnr93PRqhfTOpdA_Kc0vPp59uz8s8zL7E_GX39uoXjf4lukmVcOIFFA_zzN6MQf_FL5ue5-yE2BZJGbY" alt="Elephant">
     <script type="text/javascript" src="./script.js">
 </script>
 
